--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-mde": "^11.5.0",
+    "react-showdown": "^2.3.1",
+    "react-split": "^2.0.14"
   },
   "scripts": {
     "start": "react-scripts start",
